ultima revision del proyecto

--- a/paginas/plantel2023.html
+++ b/paginas/plantel2023.html
@@ -51,11 +51,11 @@
         <!-- banner -->
         <section>
             <div class="banner d-flex align-items-center justify-content-center">
-                <h1 class="animate__animated animate__fadeInRight">Plantel-Primera Division</h1>
+                <h1 class="animate__animated animate__backInDown">Plantel-Primera Division</h1>
             </div>
         </section>
         <!-- jugadores -->
-        <section class="jugadores animate__animated animate__fadeInRight">
+        <section class="jugadores animate__animated animate__backInLeft animate__delay-0s">
             <h2>Jugadores</h2>
             <!-- segunda prueba jugadores xd -->
                 <div class="container d-flex justify-content-center align-items-center">
