--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Club Atletico Boca Juniors</title>
+    <meta name="description" content="Somos el sitio web no oficial del club mas grande de America">
+    <meta name="keywords" content="Boca, Pol, Zeballos, Medina, Rojo, Xeneize, historia">
+    <title>Boca Web</title>
     
     <!-- Bs -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -76,46 +78,45 @@
         <section class="noticias">
                 <div class="container-fluid">
                     <div class="row">
-                    <div class="col not1" data-aos="fade-right">
-                        <h2 class="fs-1">Boca hoy</h2>
-                        <h3 class="fs-1">Boca hoy: la lesión de Pol Fernández, el regreso de Exequiel Zeballos y últimas noticias.</h3>
-                        <img src="./medios/boca-entrenamiento_.webp" alt="entrenamiento">
-                        <p class="fs-2 mt-2">El <strong><em>Xeneize</em></strong>     ya pone todas las fichas en el partido del jueves frente a Arsenal en Sarandí. Ayer por la mañana, Guillermo Fernández se realizó estudios que arrojaron una lesión muscular en el cuádriceps derecho, por lo que sería baja, al menos, por las próximas dos semanas, a la espera del parte médico oficial. Por otro lado, Exequiel Zeballos continúa con su puesta a punto. Si bien no hay una fecha estipulada de regreso, todavía le quedan tres semanas de rehabilitación y podría volver a las canchas a finales de junio</p>    
-                    </div>
+                        <div class="col not1" data-aos="fade-right">
+                            <h2 class="fs-1">Boca hoy</h2>
+                            <h3 class="fs-1">Boca hoy: la lesión de Pol Fernández, el regreso de Exequiel Zeballos y últimas noticias.</h3>
+                            <img src="./medios/boca-entrenamiento_.webp" alt="entrenamiento">
+                            <p class="fs-2 mt-2">El <strong><em>Xeneize</em></strong>     ya pone todas las fichas en el partido del jueves frente a Arsenal en Sarandí. Ayer por la mañana, Guillermo Fernández se realizó estudios que arrojaron una lesión muscular en el cuádriceps derecho, por lo que sería baja, al menos, por las próximas dos semanas, a la espera del parte médico oficial. Por otro lado, Exequiel Zeballos continúa con su puesta a punto. Si bien no hay una fecha estipulada de regreso, todavía le quedan tres semanas de rehabilitación y podría volver a las canchas a finales de junio</p>    
+                        </div>
                     </div>
                 </div>
                 <!-- cards -->
                <div class="boca-hoy">
-                        <div class="row">
-                            <div class="col-12 col-md-6 col-lg-4">
-                                <div class="card">
-                                    <img src="./medios/not1.png" alt="bocaVsPereira">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Deportivo Pereira golpeo a Boca en Venezuela</h5>
-                                        <a class="btn" href="#">Ver mas</a>
-                                    </div>
+                    <div class="row">
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <div class="card">
+                                <img src="./medios/not1.png" alt="Boca vs Deportivo Pereira">
+                                <div class="card-body">
+                                    <h4 class="card-title">Deportivo Pereira golpeo a Boca en Venezuela</h4>
+                                    <a class="btn" href="#">Ver mas</a>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-6 col-lg-4">
-                                <div class="card">
-                                    <img src="./medios/not1 (1).png" alt="marcos-rojo">
-                                    <div class="card-body">
-                                        <h5 class="card-title">¿Cuando vuelve Rojo? La incognita de los hinchas</h5>
-                                        <a class="btn" href="#">Ver mas</a>
-                                    </div>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <div class="card">
+                                <img src="./medios/not1 (1).png" alt="Marcos Rojo">
+                                <div class="card-body">
+                                    <h4 class="card-title">¿Cuando vuelve Rojo? La incognita de los hinchas</h4>
+                                    <a class="btn" href="#">Ver mas</a>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-6 col-lg-4">
-                                <div class="card">
-                                    <img src="./medios/not1 (2).png" alt="cristian-medina">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Los excelentes numero de medina en el Xeneize</h5>
-                                        <button class="btn">Ver mas</button>
-                                    </div>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <div class="card">
+                                <img src="./medios/not1 (2).png" alt="Cristian Medina">
+                                <div class="card-body">
+                                    <h4 class="card-title">Los excelentes numeros de Medina en el Xeneize</h4>
+                                    <button class="btn">Ver mas</button>
                                 </div>
                             </div>
+                        </div>
                     </div>
-                   
                 </div>
         </section>
     </main>
