--- a/paginas/plantel2023.html
+++ b/paginas/plantel2023.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Club Atletico Boca Juniors</title>
+    <meta name="description" content="Este es el plantel que nos respresenta este 2023">
+    <meta name="keywords" content="plantel, 2023, langoni, benedetto, romero, rojo, figal, almiron, medina, oscar, varela, fernandez, weigandt">
+    <title>Plantel 2023-Boca Web</title>
     <!-- Bs -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
    
@@ -57,7 +59,6 @@
         <!-- jugadores -->
         <section class="jugadores animate__animated animate__backInLeft animate__delay-0s">
             <h2>Jugadores</h2>
-            <!-- segunda prueba jugadores xd -->
                 <div class="container d-flex justify-content-center align-items-center">
                     <div>
                         <div class="row espacios">
@@ -65,7 +66,7 @@
                                 <div class="card">
                                     <img src="../medios/romeroo.jpg" alt="sergio-romero">
                                     <div class="card-body">
-                                        <h5 class="card-title">Sergio Romero</h5>
+                                        <h3 class="card-title">Sergio Romero</h3>
                                         <p>Arquero</p>
                                     </div>
                                 </div>
@@ -74,7 +75,7 @@
                                 <div class="card">
                                     <img src="../medios/langoniperfil.jpg" alt="luca-langoni">
                                     <div class="card-body">
-                                        <h5 class="card-title">Luca Langoni</h5>
+                                        <h3 class="card-title">Luca Langoni</h3>
                                         <p>Delantero</p>
                                     </div>
                                 </div>
@@ -83,16 +84,16 @@
                                 <div class="card">
                                     <img src="../medios/benedetto.jpg" alt="dario-benedetto">
                                     <div class="card-body">
-                                        <h5 class="card-title">Dario Benedetto</h5>
+                                        <h3 class="card-title">Dario Benedetto</h3>
                                         <p>Delantero</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-6 col-md-6 col-lg-3">
                                 <div class="card">
-                                    <img src="../medios/rojoperfil.jpg" alt="oscar-romero">
+                                    <img src="../medios/romeroperfil.jpg" alt="oscar-romero">
                                     <div class="card-body">
-                                        <h5 class="card-title">Oscar Romero</h5>
+                                        <h3 class="card-title">Oscar Romero</h3>
                                         <p>Mediocampista</p>
                                     </div>
                                 </div>
@@ -103,7 +104,7 @@
                                 <div class="card">
                                     <img src="../medios/fernandezperfil.jpg" alt="equi-fernandez">
                                     <div class="card-body">
-                                        <h5 class="card-title">Ezequiel Fernandez</h5>
+                                        <h3 class="card-title">Ezequiel Fernandez</h3>
                                         <p>Mediocampista</p>
                                     </div>
                                 </div>
@@ -112,7 +113,7 @@
                                 <div class="card">
                                     <img src="../medios/varelaperfil.jpg" alt="alan-varela">
                                     <div class="card-body">
-                                        <h5 class="card-title">Alan Varela</h5>
+                                        <h3 class="card-title">Alan Varela</h3>
                                         <p>Mediocampista</p>
                                     </div>
                                 </div>
@@ -121,7 +122,7 @@
                                 <div class="card">
                                     <img src="../medios/weigandtperfil.jpg" alt="chelo-weigandt">
                                     <div class="card-body">
-                                        <h5 class="card-title">Marcelo Weigandt</h5>
+                                        <h3 class="card-title">Marcelo Weigandt</h3>
                                         <p>Defensor</p>
                                     </div>
                                 </div>
@@ -130,7 +131,7 @@
                                 <div class="card">
                                     <img src="../medios/medina.jpg" alt="cristian-medina">
                                     <div class="card-body">
-                                        <h5 class="card-title">Cristian Medina</h5>
+                                        <h3 class="card-title">Cristian Medina</h3>
                                         <p>Mediocampista</p>
                                     </div>
                                 </div>
@@ -141,7 +142,7 @@
                                 <div class="card">
                                     <img src="../medios/figal.jpg" alt="nicolas-figal">
                                     <div class="card-body">
-                                        <h5 class="card-title">Nicolas Figal</h5>
+                                        <h3 class="card-title">Nicolas Figal</h3>
                                         <p>Defensor</p>
                                     </div>
                                 </div>
@@ -150,7 +151,7 @@
                                 <div class="card">
                                     <img src="../medios/rojoperfil.jpg" alt="marcos-rojo">
                                     <div class="card-body">
-                                        <h5 class="card-title">Marcos Rojo</h5>
+                                        <h3 class="card-title">Marcos Rojo</h3>
                                         <p>Defensor</p>
                                     </div>
                                 </div>
