--- a/paginas/contactanos.html
+++ b/paginas/contactanos.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Club Atletico Boca Juniors</title>
+    <meta name="description" content="Dejanos tus dudas u opiniones y nos contactaremos con vos">
+    <meta name="keywords" content="Contactanos, opinion, consulta, Email, Nombre, Apellido, Número, Enviar">
+    <title>Contactanos-Boca Web</title>
     <!-- Bs -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <!-- Font -->
