--- a/paginas/labombonera.html
+++ b/paginas/labombonera.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Club Atletico Boca Juniors</title>
+    <meta name="description" content="La Bombonera es el templo mas bello del futbol argentino y esta es su historia">
+    <meta name="keywords" content="Bombonera, historia, Boca, Libertadores">
+    <title>La Bombonera-Boca Web</title>
     <!-- Bs -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <!-- Font -->
@@ -78,11 +80,11 @@
                 <h2>Galeria</h2>
             </div>
             <div class="grid-container">
-                <img class="img1" src="../medios/galeria.jpg" alt="bombonera-1">
-                <img class="img2" src="../medios/galeria2.jpg" alt="bombonera-2">
-                <img class="img3" src="../medios/la bombonera.webp" alt="bombonera-3">
-                <img class="img4" src="../medios/galeria 4.webp" alt="bombonera-4">
-                <img class="img5" src="../medios/galeria5.jpg" alt="bombonera-5">
+                <img class="img1" src="../medios/galeria.jpg" alt="La bombonera, lado de la 12">
+                <img class="img2" src="../medios/galeria2.jpg" alt="La bombonera con publico">
+                <img class="img3" src="../medios/la bombonera.webp" alt="La Bombonera desde platea alta">
+                <img class="img4" src="../medios/galeria 4.webp" alt="La Bombonera desde plata alta sin publico">
+                <img class="img5" src="../medios/galeria5.jpg" alt="La 12 con publico">
             </div>
             
         </div>
